--- a/source/index.ejs
+++ b/source/index.ejs
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div data-react-application>
-      <h5 class="text-center text-muted">Loading application...</h5>
+      <h5 class="text-center text-muted">Loading application, please wait...</h5>
     </div>
   </body>
 </html>
